--- a/163/chart.html
+++ b/163/chart.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>网易一元夺宝数据分析</title>
-        <link rel="stylesheet" type="text/css" href="http://ten.com/163/materialize/google-font.css">
-        <link rel="stylesheet" type="text/css" href="http://ten.com/163/materialize/css/materialize.min.css">
+        <link rel="stylesheet" type="text/css" href="http://tenjj.b0.upaiyun.com/materialize/css/materialize.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
@@ -21,10 +20,10 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="http://ten.com/js/jquery-2.0.3.js"></script>
-        <script type="text/javascript" src="http://ten.com/js/echarts-2.2.7/build/dist/echarts-all.js"></script>
-        <script type="text/javascript" src="http://ten.com/163/map.js"></script>
-        <script type="text/javascript" src="http://ten.com/163/userrank.js"></script>
+        <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
+        <script type="text/javascript" src="http://tenjj.b0.upaiyun.com/echarts/echarts.js"></script>
+        <script type="text/javascript" src="http://139.129.92.21:8090/map.js"></script>
+        <script type="text/javascript" src="http://139.129.92.21:8090/userrank.js"></script>
         <script type="text/javascript">
         </script>
     </body>
